js262/test/language/module-code/parse-err-decl-pos-export-do-while.js


/*---
description: Statement cannot contain an `export` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

do export default null; while (false)
